system-ui (1.1.17~1) unstable; urgency=low

  * [UNRELEASED]

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Mon, 12 Sep 2011 15:43:47 +0300

system-ui (1.1.16-1) unstable; urgency=low

  * Fixes: NB#281758 - There is a black bar on top of the Nokia ripple animation and/or PIN query dialog during boot

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Mon, 12 Sep 2011 15:42:41 +0200

system-ui (1.1.15-1) unstable; urgency=low

  * Fixes: NB#280501 - Inconsistent placement of information banners and system banners when status area is not visible

 -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Fri, 09 Sep 2011 10:34:45 +0200

system-ui (1.1.14-1) unstable; urgency=low

  * Fixes: NB#255218 - Status Menu open/close transition is incorrect

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Tue, 06 Sep 2011 17:24:55 +0300

system-ui (1.1.13-1) unstable; urgency=low

  * Fixes: NB#265870 - Randomly when a notification comes, the window underneatch is changed to show something for 1s

 -- Eetu Lehmusvuo <ext-eetu.6.lehmusvuo@nokia.com>  Fri, 2 Sep 2011 15:51:22 +0300

system-ui (1.1.12-1) unstable; urgency=low

  * Fixes: NB#278885 - Disable low memory notification for PR1.1 & later

 -- Pankaj Saharan <pankaj.saharan@nokia.com>  Wed, 30 Aug 2011 12:00:21 +0300

system-ui (1.1.11-1) unstable; urgency=low

  * Fixes: NB#278398 - COREWEB: /usr/bin/sysuid '__aeabi_ldiv0 StatusIndicatorAnimationView::setupAnimationTimeline StatusIndicatorAnimationView::applyStyle StatusIndicatorIconView::applyStyle'

 -- Pankaj Saharan <pankaj.saharan@nokia.com>  Tue, 23 Aug 2011 15:30:05 +0300

system-ui (1.1.10-1) unstable; urgency=low

  * Fixes: NB#262034 - Accessory connected sound played when disconnecting USB cable

 -- Pauli Lehtinen <pauli.lehtinen@nokia.com>  Fri, 19 Aug 2011 16:02:02 +0300

system-ui (1.1.9-1) unstable; urgency=low

  * Fixes: NB#275357 - [TASK] Low memory notification dialog

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Tue, 09 Aug 2011 13:02:25 +0300
